--- a/assets/styles.css
+++ b/assets/styles.css
@@ -138,4 +138,56 @@ body {
   width: 50vw;
   font-size: 20px;
   font-weight: 700;
+  margin-top: 3%;
+}
+/* Welcome introduction */
+.intro-container {
+  margin-top: -3vh;
+}
+.inner-box {
+  /* padding: 10px; */
+  text-align: center;
+  margin: 12px;
+  font-size: 4vh;
+  font-family: "Sofia", sans-serif;
+}
+.inner-box span {
+  font-size: 5.5vh;
+  font-family: "Trirong", serif;
+  padding: 5px;
+  text-decoration: underline;
+}
+/* Review box on welcome page */
+.review-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin-left: 60%;
+  margin-right: 10%;
+  padding: 50px;
+}
+.review {
+  border: 0.5px solid black;
+  background-color: var(--white);
+  opacity: 0.6;
+  border-radius: 30px;
+  margin: 25px;
+  padding: 15px;
+  width: 100%;
+}
+@media screen and (max-width: 1400px) {
+  .review-container {
+    margin-left: 1%;
+    margin-right: 40px;
+    width: 90%;
+    margin-top: 8vh;
+  }
+}
+@media screen and (max-width: 500px) {
+  .review-container {
+    margin-left: 1%;
+    margin-right: 40px;
+    width: 90%;
+    margin-top: -2vh;
+  }
 }
