--- a/Client/assets/styles.css
+++ b/Client/assets/styles.css
@@ -23,7 +23,7 @@ body {
   padding: 0;
   font-family: "Trirong", serif;
   background-image: url("../images/background.jpg");
-  background-color: var(--blue);
+  /* background-color: rgb(33, 21, 21); */
   height: 100vh; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
@@ -185,7 +185,6 @@ body {
   align-items: center;
   padding-left: 15%;
   padding-right: 15%;
-  padding-bottom: 100px;
   margin-top: 80px;
 }
 .review {
@@ -220,8 +219,12 @@ body {
     margin-bottom: 50px;
   }
   .body{
-    /* font-family: "Trirong", serif; */
     font-size: 16px;
-
   }
 }
+/* Section two */
+#services-page{
+  background-image: url("./images/background2.jpg");
+  height: 100vh; /* You must set a specified height */
+  background-position: center; /* Center the image */
+  background-size: c;
