--- a/Client/assets/styles.css
+++ b/Client/assets/styles.css
@@ -23,7 +23,7 @@ body {
   padding: 0;
   font-family: "Trirong", serif;
   background-image: url("../images/background.jpg");
-  /* background-color: rgb(33, 21, 21); */
+  background-color: rgb(33, 21, 21);
   height: 100vh; /* You must set a specified height */
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
@@ -224,7 +224,32 @@ body {
 }
 /* Section two */
 #services-page{
-  background-image: url("./images/background2.jpg");
-  height: 100vh; /* You must set a specified height */
-  background-position: center; /* Center the image */
-  background-size: c;
+  margin-bottom: 10%;
+  padding-top: 10px;
+  background-image: url('./images/background2.jpg');
+  background-color: rgb(33, 21, 21);
+  height: 100vh;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
+}
+.service-box-container{
+  height: 70%;
+  margin: auto;
+  width: 90%;
+  border: 3px solid black;
+  display: flex;
+}
+.box{
+  display: flex;
+  border: 0.5px solid black;
+  background-color: var(--light-blue);
+  font-family: "Trirong", serif;
+  font-weight: 500;
+  opacity: 0.6;
+  border-radius: 20px;
+  margin: 25px;
+  padding: 15px;
+  width: 100%;
+  flex-wrap: nowrap;
+}
