--- a/Client/assets/styles.css
+++ b/Client/assets/styles.css
@@ -271,7 +271,7 @@ body {
   background-repeat: no-repeat;
 }
 #photo-container{
-  height: 70%;
+  height: 90%;
   padding-top: 50px;
   margin: auto;
   width: 100%;
@@ -285,11 +285,15 @@ body {
   background-color: var(--light-blue);
   font-family: "Trirong", serif;
   font-weight: 500;
-  opacity: 0.6;
+  /* opacity: 0.6; */
   border-radius: 20px;
   margin: 25px;
   padding: 15px;
-  height: 90%;
+  height: 80%;
   width: 100%; 
+}
+.photo-section img {
+  height: 450px;
+  width: 100%;
 }
 /* section four // reserve form  */
