--- a/Client/assets/styles.css
+++ b/Client/assets/styles.css
@@ -265,11 +265,12 @@ body {
   padding-top: 10px;
   background-image: url('./images/background3.jpg');
   background-color: rgb(33, 21, 21);
-  height: 100vh;
+  /* height: 100vh; */
   background-position: center; 
-  background-repeat: no-repeat; 
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat; */
+  background-size: contain;
 }
+
 #photo-container{
   height: 90%;
   padding-top: 50px;
@@ -285,7 +286,6 @@ body {
   background-color: var(--light-blue);
   font-family: "Trirong", serif;
   font-weight: 500;
-  /* opacity: 0.6; */
   border-radius: 20px;
   margin: 25px;
   padding: 15px;
@@ -304,3 +304,24 @@ body {
   width: 100vw;
 }
 /* section four // reserve form  */
+#contact-page{
+  padding-top: 10px;
+  background-image: url('./images/background4.jpg');
+  background-color: rgb(33, 21, 21);
+  height: 100vh;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
+}
+#contact-header{
+  margin-bottom: 10%;
+}
+.form-container{
+  border: 1px solid white;
+  background-color: var(--light-blue);
+  opacity: .6;
+  height: 50vh;
+  width: 70%;
+  margin: auto;
+
+}
