--- a/Client/assets/styles.css
+++ b/Client/assets/styles.css
@@ -161,7 +161,6 @@ body {
   margin: 12px;
   margin-top: 6vh;
   font-size: 4vh;
-  font-family: "Sofia", sans-serif;
   opacity: .9;
   border-radius: 5px;
   margin-right: 5%;
@@ -190,12 +189,12 @@ body {
   align-items: center;
   padding-left: 15%;
   padding-right: 15%;
+  font-family: 'Courier New', Courier, monospace;
   margin-top: 80px;
 }
 .review {
   border: 0.5px solid black;
   background-color: var(--light-blue);
-  font-family: "Trirong", serif;
   font-weight: 500;
   opacity: 0.6;
   border-radius: 20px;
@@ -245,7 +244,6 @@ body {
   display: flex;
 }
 .box{
-  display: flex;
   border: 0.5px solid black;
   background-color: var(--light-blue);
   font-family: "Trirong", serif;
@@ -257,6 +255,40 @@ body {
   width: 100%;
   flex-wrap: nowrap;
   overflow: hidden;
+}
+.name{
+  font-family: 'Courier New', Courier, monospace;
+}
+@media screen and (max-width: 1100px) {
+  .service-box-container{
+    height: 550px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+  .box{
+    width: 75%;
+    opacity: .9;
+    height: 375px;
+    margin: auto;
+    margin-top: 2px;
+    padding-bottom: 10px;
+    margin-bottom: 1px;
+  }
+  #about-footer {
+    font-size: 15px;
+  }
+}
+.btn-div{
+  width: 100vw;
+  margin-bottom: 50px;
+}
+#refresh-btn{
+  width: 40%;
+  border-radius: 10px;
+  margin-left: 30%;
+  margin-bottom: 20px;
+  background-color: var(--light-blue);
 }
 
 
@@ -284,7 +316,7 @@ body {
   flex-wrap: wrap;
   border: 0.5px solid black;
   background-color: var(--light-blue);
-  font-family: "Trirong", serif;
+  font-family: "Sofia", sans-serif;
   font-weight: 500;
   border-radius: 20px;
   margin: 25px;
@@ -295,13 +327,6 @@ body {
 .photo-section img {
   height: 450px;
   width: 100%;
-}
-.btn-div{ 
-  margin: auto;
-}
-#btn{
-  /* margin: 25px; */
-  width: 100vw;
 }
 /* section four // reserve form  */
 #contact-page{
@@ -367,20 +392,29 @@ footer{
   bottom: 0;
   width: 100%;
   background-color: var(--white);
-  border-top: 8px solid black;
+  border-top: 2px var(--white) black;
 }
 .icons{
-  width: 10%;
   height: 30px;
-  margin-left: 45%;
-  margin-top: 15px;
+  margin-top: -10px;
+  text-align: center;
+  font-size: 20px;
+
 }
 .bio{
-  margin-top: -15px;
-  margin-left: 45.4%;
+  margin-top: -70px;
+  text-align: center;
   font-size: 20px;
 }
 #twitter{
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+#contact-email{
+  margin-top: -10px;
+  text-align: center;
+  text-decoration: none;
+}
+#contact-email a {
+  color: black;
 }
